fixing broken CSS

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -146,15 +146,6 @@ aside {
 
 /* forms */
 
-input, textarea, select, .uneditable-input {
-	border: 1px solid #bbb;
-	width: 100%;
-	padding: 10px;
-	height: auto;
-	margin-bottom: 15px;
-	@include box_sizing;
-}
-
 #error_explanation {
 	color: #f00;
 
